--- a/Veterinarias.css
+++ b/Veterinarias.css
@@ -4,18 +4,23 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 438px;
+  min-height: 510px;
+}
+
+.u-section-1 .u-text-1 {
+  font-size: 3.75rem;
+  margin: 60px auto;
 }
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 397px;
+    min-height: 421px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 304px;
+    min-height: 322px;
   }
 }
 
@@ -25,7 +30,11 @@
   }
 
   .u-section-1 .u-sheet-1 {
-    min-height: 325px;
+    min-height: 242px;
+  }
+
+  .u-section-1 .u-text-1 {
+    font-size: 2.25rem;
   }
 }
 
@@ -35,127 +44,147 @@
   }
 
   .u-section-1 .u-sheet-1 {
-    min-height: 205px;
+    min-height: 152px;
   }
-} .u-section-2 {
-  background-image: none;
-}
 
-.u-section-2 .u-sheet-1 {
-  min-height: 799px;
-}
-
-.u-section-2 .u-text-1 {
-  font-size: 3rem;
-  margin: 70px 319px 0 282px;
+  .u-section-1 .u-text-1 {
+    font-size: 1.875rem;
+  }
+}.u-section-2 .u-sheet-1 {
+  min-height: 709px;
 }
 
 .u-section-2 .u-list-1 {
-  margin: 56px 0;
+  grid-template-rows: repeat(1, auto);
+  margin: 60px 0;
 }
 
 .u-section-2 .u-repeater-1 {
-  grid-template-columns: repeat(3, calc(33.3333% - 20px));
-  min-height: 565px;
-  grid-gap: 30px;
+  grid-template-columns: repeat(3, calc(33.3333% - 11.3333px));
+  min-height: 455px;
+  grid-gap: 17px;
 }
 
 .u-section-2 .u-list-item-1 {
+  --radius: 25px;
+  --animation-custom_in-translate_x: 0px;
+  --animation-custom_in-translate_y: 300px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
   background-image: none;
 }
 
 .u-section-2 .u-container-layout-1 {
-  padding: 30px;
+  padding: 0 0 20px;
 }
 
 .u-section-2 .u-image-1 {
-  height: 274px;
-  object-position: 50% 18.48%;
-  margin: 0;
+  object-position: 50% 50.97%;
+  height: 404px;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
-.u-section-2 .u-text-2 {
-  margin: 20px 0 0;
+.u-section-2 .u-text-1 {
+  font-weight: 700;
+  text-transform: uppercase;
+  margin: 15px 21px 0;
 }
 
 .u-section-2 .u-btn-1 {
   font-weight: 700;
   font-size: 1.25rem;
   letter-spacing: 1px;
-  margin: 30px auto 0;
+  margin: 20px auto 0;
   padding: 0;
 }
 
-.u-section-2 .u-text-3 {
-  margin: 30px 0 0;
+.u-section-2 .u-text-2 {
+  margin: 20px auto 0;
+}
+
+.u-section-2 .u-list-item-2 {
+  --radius: 25px;
+  --animation-custom_in-translate_x: 0px;
+  --animation-custom_in-translate_y: 300px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
+  background-image: none;
 }
 
 .u-section-2 .u-container-layout-2 {
-  padding: 30px;
+  padding: 0 0 20px;
 }
 
 .u-section-2 .u-image-2 {
-  height: 274px;
-  margin: 0;
+  object-position: 50% 100%;
+  height: 404px;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
-.u-section-2 .u-text-4 {
-  font-size: 1.5rem;
-  text-transform: none;
+.u-section-2 .u-text-3 {
   font-weight: 700;
-  font-family: Roboto, sans-serif;
-  margin: 20px 0 0;
+  text-transform: uppercase;
+  margin: 15px 21px 0;
 }
 
 .u-section-2 .u-btn-2 {
   font-weight: 700;
   font-size: 1.25rem;
   letter-spacing: 1px;
-  margin: 30px auto 0;
+  margin: 20px auto 0;
   padding: 0;
 }
 
-.u-section-2 .u-text-5 {
-  margin: 30px 0 0;
+.u-section-2 .u-text-4 {
+  margin: 20px auto 0;
+}
+
+.u-section-2 .u-list-item-3 {
+  --radius: 25px;
+  --animation-custom_in-translate_x: 0px;
+  --animation-custom_in-translate_y: 300px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
+  background-image: none;
 }
 
 .u-section-2 .u-container-layout-3 {
-  padding: 30px;
+  padding: 0 0 20px;
 }
 
 .u-section-2 .u-image-3 {
-  height: 274px;
-  margin: 0;
+  object-position: 50% 100%;
+  height: 404px;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
-.u-section-2 .u-text-6 {
-  font-size: 1.5rem;
-  text-transform: none;
+.u-section-2 .u-text-5 {
   font-weight: 700;
-  font-family: Roboto, sans-serif;
-  margin: 20px 0 0;
+  text-transform: uppercase;
+  margin: 15px 21px 0;
 }
 
 .u-section-2 .u-btn-3 {
   font-weight: 700;
   font-size: 1.25rem;
   letter-spacing: 1px;
-  margin: 30px auto 0;
+  margin: 20px auto 0;
   padding: 0;
 }
 
-.u-section-2 .u-text-7 {
-  margin: 30px 0 0;
+.u-section-2 .u-text-6 {
+  margin: 20px auto 0;
 }
 
 @media (max-width: 1199px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 1462px;
-  }
-
-  .u-section-2 .u-text-1 {
-    margin-right: 219px;
-    margin-left: 182px;
+    min-height: 1332px;
   }
 
   .u-section-2 .u-list-1 {
@@ -164,143 +193,105 @@
   }
 
   .u-section-2 .u-repeater-1 {
-    grid-template-columns: repeat(3, calc(33.333333333333336% - 20px));
-    min-height: 460px;
+    grid-template-columns: repeat(3, calc(33.333333333333336% - 11.3333px));
+    min-height: 373px;
+  }
+
+  .u-section-2 .u-list-item-1 {
+    background-position: 50% 50.97%;
   }
 
   .u-section-2 .u-image-1 {
-    height: 217px;
-    margin-right: initial;
-    margin-left: initial;
+    inset: auto;
+    height: 333px;
+  }
+
+  .u-section-2 .u-text-1 {
+    margin-top: -149px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-list-item-2 {
+    background-position: 50% 100%;
   }
 
   .u-section-2 .u-image-2 {
-    height: 217px;
-    margin-right: initial;
-    margin-left: initial;
+    inset: auto;
+    height: 333px;
+  }
+
+  .u-section-2 .u-text-3 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-list-item-3 {
+    background-position: 50% 100%;
   }
 
   .u-section-2 .u-image-3 {
-    height: 217px;
-    margin-right: initial;
-    margin-left: initial;
+    inset: auto;
+    height: 333px;
+  }
+
+  .u-section-2 .u-text-5 {
+    margin-left: 0;
+    margin-right: 0;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-2 .u-sheet-1 {
-    min-height: 2141px;
-  }
-
-  .u-section-2 .u-text-1 {
-    margin-right: 109px;
-    margin-left: 72px;
-  }
-
   .u-section-2 .u-repeater-1 {
-    grid-template-columns: repeat(2, calc(50% - 15px));
-    min-height: 1112px;
+    grid-template-columns: repeat(2, calc(50% - 8.499975px));
+    min-height: 885px;
   }
 
   .u-section-2 .u-image-1 {
-    height: 257px;
-    margin-right: initial;
-    margin-left: initial;
+    height: 383px;
   }
 
   .u-section-2 .u-image-2 {
-    height: 257px;
-    margin-right: initial;
-    margin-left: initial;
+    height: 383px;
   }
 
   .u-section-2 .u-image-3 {
-    height: 257px;
-    margin-right: initial;
-    margin-left: initial;
+    height: 383px;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-2 .u-sheet-1 {
-    min-height: 4747px;
-  }
-
-  .u-section-2 .u-text-1 {
-    font-size: 2.25rem;
-    margin-right: 1px;
-    margin-left: 0;
-  }
-
   .u-section-2 .u-repeater-1 {
     grid-template-columns: 100%;
   }
 
-  .u-section-2 .u-container-layout-1 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
   .u-section-2 .u-image-1 {
-    height: 445px;
-    margin-right: initial;
-    margin-left: initial;
+    height: 575px;
   }
 
-  .u-section-2 .u-container-layout-2 {
-    padding-left: 10px;
-    padding-right: 10px;
+  .u-section-2 .u-text-1 {
+    margin-top: -146px;
   }
 
   .u-section-2 .u-image-2 {
-    height: 445px;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-2 .u-container-layout-3 {
-    padding-left: 10px;
-    padding-right: 10px;
+    height: 575px;
   }
 
   .u-section-2 .u-image-3 {
-    height: 445px;
-    margin-right: initial;
-    margin-left: initial;
+    height: 575px;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-2 .u-sheet-1 {
-    min-height: 1530px;
-  }
-
-  .u-section-2 .u-text-1 {
-    margin-right: 0;
-    font-size: 1.5rem;
-  }
-
-  .u-section-2 .u-list-1 {
-    margin-top: 157px;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
   .u-section-2 .u-image-1 {
-    height: 274px;
-    margin-right: initial;
-    margin-left: initial;
+    height: 362px;
   }
 
   .u-section-2 .u-image-2 {
-    height: 274px;
-    margin-right: initial;
-    margin-left: initial;
+    height: 362px;
   }
 
   .u-section-2 .u-image-3 {
-    height: 274px;
-    margin-right: initial;
-    margin-left: initial;
+    height: 362px;
   }
 }
