--- a/index.css
+++ b/index.css
@@ -1,19 +1,19 @@
+ .u-section-1 {
+  background-image: url("images/foto_home.webp");
+}
+
 .u-section-1 .u-sheet-1 {
-  min-height: 622px;
+  min-height: 618px;
 }
 
 .u-section-1 .u-text-1 {
-  margin: 141px auto 0;
-}
-
-.u-section-1 .u-text-2 {
   --animation-custom_in-translate_x: 0px;
   --animation-custom_in-translate_y: 0px;
   --animation-custom_in-opacity: 0;
   --animation-custom_in-rotate: 0deg;
   --animation-custom_in-scale: 1;
   font-size: 6rem;
-  margin: 20px 31px 0;
+  margin: 82px 491px 0 0;
 }
 
 .u-section-1 .u-social-icons-1 {
@@ -21,7 +21,7 @@
   min-height: 16px;
   width: 198px;
   min-width: 108px;
-  margin: 20px auto 60px;
+  margin: 30px auto 60px 226px;
 }
 
 .u-section-1 .u-icon-1 {
@@ -37,76 +37,155 @@
 }
 
 @media (max-width: 1199px) {
-  .u-section-1 .u-text-2 {
-    width: auto;
-    margin-left: 100px;
-    margin-right: 100px;
+   .u-section-1 {
+    background-position: 50% 50%;
+  }
+
+  .u-section-1 .u-sheet-1 {
+    min-height: 510px;
+  }
+
+  .u-section-1 .u-text-1 {
+    font-size: 3.75rem;
+    margin-right: 291px;
   }
 }
 
 @media (max-width: 991px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 391px;
+  }
+
   .u-section-1 .u-text-1 {
-    margin-top: 67px;
-  }
-
-  .u-section-1 .u-text-2 {
-    margin-top: 26px;
-    margin-left: 210px;
-    margin-right: 210px;
-  }
-
-  .u-section-1 .u-social-icons-1 {
-    margin-top: 35px;
+    margin-right: 71px;
   }
 }
 
 @media (max-width: 767px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 293px;
+  }
+
   .u-section-1 .u-text-1 {
-    margin-top: 141px;
-  }
-
-  .u-section-1 .u-text-2 {
-    font-size: 4.5rem;
-    margin-top: 20px;
-    margin-left: 300px;
-    margin-right: 300px;
-  }
-
-  .u-section-1 .u-social-icons-1 {
-    margin-top: 20px;
+    font-size: 3rem;
+    margin-right: 0;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-1 .u-text-2 {
-    font-size: 3rem;
-    width: 340px;
-    margin-left: auto;
-    margin-right: auto;
+  .u-section-1 .u-sheet-1 {
+    min-height: 184px;
+  }
+
+  .u-section-1 .u-text-1 {
+    font-size: 2.25rem;
   }
 } .u-section-2 {
-  background-image: url("images/foto_home.webp");
+  min-height: 471px;
 }
 
-.u-section-2 .u-sheet-1 {
-  min-height: 618px;
+.u-section-2 .u-layout-wrap-1 {
+  margin-top: 4px;
+  margin-bottom: 55px;
+}
+
+.u-section-2 .u-layout-cell-1 {
+  min-height: 412px;
+}
+
+.u-section-2 .u-container-layout-1 {
+  padding: 30px;
+}
+
+.u-section-2 .u-text-1 {
+  margin: 0;
+}
+
+.u-section-2 .u-text-2 {
+  --animation-custom_in-translate_x: 0px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
+  margin: 20px 139px 0 0;
+}
+
+.u-section-2 .u-layout-cell-2 {
+  min-height: 412px;
+}
+
+.u-section-2 .u-container-layout-2 {
+  padding: 30px;
+}
+
+.u-section-2 .u-text-3 {
+  margin: 0;
+}
+
+.u-section-2 .u-text-4 {
+  margin: 20px auto 0 0;
 }
 
 @media (max-width: 1199px) {
    .u-section-2 {
-    background-position: 50% 50%;
+    min-height: 395px;
   }
 
-  .u-section-2 .u-sheet-1 {
-    min-height: 400px;
+  .u-section-2 .u-layout-wrap-1 {
+    margin-bottom: 6px;
+  }
+
+  .u-section-2 .u-layout-cell-1 {
+    min-height: 340px;
+  }
+
+  .u-section-2 .u-text-2 {
+    margin-right: 39px;
+  }
+
+  .u-section-2 .u-layout-cell-2 {
+    min-height: 340px;
+  }
+}
+
+@media (max-width: 991px) {
+   .u-section-2 {
+    min-height: 94px;
+  }
+
+  .u-section-2 .u-layout-cell-1 {
+    min-height: 100px;
+  }
+
+  .u-section-2 .u-text-2 {
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-layout-cell-2 {
+    min-height: 100px;
+  }
+}
+
+@media (max-width: 767px) {
+   .u-section-2 {
+    min-height: 194px;
+  }
+
+  .u-section-2 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-2 .u-container-layout-2 {
+    padding-left: 10px;
+    padding-right: 10px;
   }
 } .u-section-3 {
-  min-height: 432px;
+  min-height: 339px;
 }
 
 .u-section-3 .u-list-1 {
-  margin-top: 60px;
-  margin-bottom: -48px;
+  margin: 0 0 25px;
 }
 
 .u-section-3 .u-repeater-1 {
@@ -242,7 +321,8 @@
   }
 
   .u-section-3 .u-list-1 {
-    margin-bottom: 60px;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-3 .u-repeater-1 {
@@ -277,6 +357,8 @@
 
   .u-section-3 .u-list-1 {
     margin-bottom: -170px;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-3 .u-repeater-1 {
@@ -292,7 +374,9 @@
   }
 
   .u-section-3 .u-list-1 {
-    margin-bottom: 60px;
+    margin-bottom: 25px;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-3 .u-repeater-1 {
@@ -306,94 +390,137 @@
     grid-auto-columns: 100%;
   }
 } .u-section-4 {
-  min-height: 471px;
+  min-height: 1190px;
 }
 
 .u-section-4 .u-layout-wrap-1 {
-  margin-top: 4px;
-  margin-bottom: 55px;
+  margin: 60px 0;
 }
 
-.u-section-4 .u-layout-cell-1 {
-  min-height: 412px;
+.u-section-4 .u-image-1 {
+  min-height: 591px;
+  --radius: 40px;
+  background-image: url("images/multimedia.normal.ae157d4b0b9194dc.43616c6c65204365726f5f6e6f726d616c2e6a706567.jpeg");
 }
 
 .u-section-4 .u-container-layout-1 {
   padding: 30px;
 }
 
-.u-section-4 .u-text-1 {
-  margin: 0;
-}
-
-.u-section-4 .u-text-2 {
-  --animation-custom_in-translate_x: 0px;
-  --animation-custom_in-translate_y: 0px;
-  --animation-custom_in-opacity: 0;
-  --animation-custom_in-rotate: 0deg;
-  --animation-custom_in-scale: 1;
-  margin: 20px 139px 0 0;
-}
-
 .u-section-4 .u-layout-cell-2 {
-  min-height: 412px;
+  min-height: 591px;
 }
 
 .u-section-4 .u-container-layout-2 {
-  padding: 30px;
+  padding: 30px 30px 30px 0;
+}
+
+.u-section-4 .u-text-1 {
+  font-size: 3rem;
+  font-weight: 700;
+  margin: 30px auto 0 0;
+}
+
+.u-section-4 .u-text-2 {
+  font-size: 1.25rem;
+  margin: 20px auto 0 0;
+}
+
+.u-section-4 .u-layout-cell-3 {
+  min-height: 530px;
+}
+
+.u-section-4 .u-container-layout-3 {
+  padding: 30px 0;
 }
 
 .u-section-4 .u-text-3 {
-  margin: 0;
+  font-weight: 700;
+  font-size: 3rem;
+  margin: 55px 13px 0 0;
 }
 
 .u-section-4 .u-text-4 {
-  margin: 20px auto 0 0;
+  font-size: 1.25rem;
+  margin: 20px 30px 0 0;
+}
+
+.u-section-4 .u-image-2 {
+  min-height: 523px;
+  background-image: url("images/multimedia.grande.9de568bb5a65d730.32303137303930395f3138323130345f6772616e64652e6a7067.jpg");
+  background-position: 50% 50%;
+  --radius: 40px;
+}
+
+.u-section-4 .u-container-layout-4 {
+  padding: 30px;
 }
 
 @media (max-width: 1199px) {
    .u-section-4 {
-    min-height: 395px;
+    min-height: 1014px;
   }
 
   .u-section-4 .u-layout-wrap-1 {
-    margin-bottom: 6px;
+    margin-right: initial;
+    margin-left: initial;
   }
 
-  .u-section-4 .u-layout-cell-1 {
-    min-height: 340px;
-  }
-
-  .u-section-4 .u-text-2 {
-    margin-right: 39px;
+  .u-section-4 .u-image-1 {
+    min-height: 487px;
+    background-position: 50% 50%;
   }
 
   .u-section-4 .u-layout-cell-2 {
-    min-height: 340px;
+    min-height: 487px;
+  }
+
+  .u-section-4 .u-layout-cell-3 {
+    min-height: 437px;
+  }
+
+  .u-section-4 .u-text-3 {
+    margin-right: 0;
+  }
+
+  .u-section-4 .u-text-4 {
+    margin-right: 0;
+  }
+
+  .u-section-4 .u-image-2 {
+    min-height: 431px;
   }
 }
 
 @media (max-width: 991px) {
    .u-section-4 {
-    min-height: 94px;
+    min-height: 821px;
   }
 
-  .u-section-4 .u-layout-cell-1 {
-    min-height: 100px;
-  }
-
-  .u-section-4 .u-text-2 {
-    margin-right: 0;
+  .u-section-4 .u-image-1 {
+    min-height: 373px;
   }
 
   .u-section-4 .u-layout-cell-2 {
     min-height: 100px;
   }
+
+  .u-section-4 .u-layout-cell-3 {
+    min-height: 100px;
+  }
+
+  .u-section-4 .u-image-2 {
+    min-height: 330px;
+  }
 }
 
 @media (max-width: 767px) {
    .u-section-4 {
-    min-height: 194px;
+    min-height: 1397px;
+  }
+
+  .u-section-4 .u-image-1 {
+    min-height: 560px;
   }
 
   .u-section-4 .u-container-layout-1 {
@@ -402,184 +529,245 @@
   }
 
   .u-section-4 .u-container-layout-2 {
+    padding-right: 10px;
+  }
+
+  .u-section-4 .u-text-1 {
+    font-size: 1.875rem;
+  }
+
+  .u-section-4 .u-text-2 {
+    font-size: 1rem;
+  }
+
+  .u-section-4 .u-layout-cell-3 {
+    order: 1;
+  }
+
+  .u-section-4 .u-text-3 {
+    font-size: 1.875rem;
+  }
+
+  .u-section-4 .u-text-4 {
+    font-size: 1rem;
+  }
+
+  .u-section-4 .u-image-2 {
+    min-height: 495px;
+    order: 0;
+  }
+
+  .u-section-4 .u-container-layout-4 {
     padding-left: 10px;
     padding-right: 10px;
   }
-} .u-section-5 {
-  min-height: 402px;
 }
 
-.u-section-5 .u-list-1 {
-  grid-template-rows: repeat(1, auto);
-  margin-top: 40px;
-  margin-bottom: 40px;
+@media (max-width: 575px) {
+   .u-section-4 {
+    min-height: 1046px;
+  }
+
+  .u-section-4 .u-image-1 {
+    min-height: 353px;
+  }
+
+  .u-section-4 .u-text-1 {
+    font-size: 1.5rem;
+  }
+
+  .u-section-4 .u-text-3 {
+    font-size: 1.5rem;
+  }
+
+  .u-section-4 .u-image-2 {
+    min-height: 312px;
+  }
+}.u-section-5 .u-sheet-1 {
+  min-height: 494px;
 }
 
-.u-section-5 .u-repeater-1 {
-  grid-auto-columns: calc(25% - 7.5px);
-  grid-template-columns: repeat(4, calc(25% - 7.5px));
-  min-height: 322px;
-  grid-gap: 10px;
+.u-section-5 .u-text-1 {
+  margin: 32px auto 0;
+}
+
+.u-section-5 .u-layout-wrap-1 {
+  margin-top: 4px;
+  margin-bottom: 32px;
+}
+
+.u-section-5 .u-layout-cell-1 {
+  min-height: 381px;
 }
 
 .u-section-5 .u-container-layout-1 {
-  padding: 7px 20px;
+  padding: 45px 30px 30px;
+}
+
+.u-section-5 .u-text-2 {
+  font-weight: 700;
+  margin: 0;
 }
 
 .u-section-5 .u-image-1 {
-  width: 241px;
-  height: 143px;
-  margin: 0 auto;
+  width: 160px;
+  height: 160px;
+  margin: 20px auto 0;
+}
+
+.u-section-5 .u-text-3 {
+  font-size: 1.125rem;
+  margin: 20px 0 0;
+}
+
+.u-section-5 .u-text-4 {
+  margin-left: 0;
+  margin-right: 0;
+  margin-bottom: 0;
+}
+
+.u-section-5 .u-layout-cell-2 {
+  min-height: 381px;
 }
 
 .u-section-5 .u-container-layout-2 {
-  padding: 7px 20px;
+  padding: 45px 14px 30px;
+}
+
+.u-section-5 .u-text-5 {
+  font-weight: 700;
+  margin: 0 16px;
 }
 
 .u-section-5 .u-image-2 {
-  width: 241px;
-  height: 143px;
-  margin: 0 auto;
+  width: 160px;
+  height: 160px;
+  margin: 20px auto 0;
+}
+
+.u-section-5 .u-text-6 {
+  font-size: 1.125rem;
+  margin: 20px 0 0;
+}
+
+.u-section-5 .u-text-7 {
+  margin: 20px 16px 0;
+}
+
+.u-section-5 .u-layout-cell-3 {
+  min-height: 374px;
 }
 
 .u-section-5 .u-container-layout-3 {
-  padding: 7px 20px;
+  padding: 45px 30px 30px;
+}
+
+.u-section-5 .u-text-8 {
+  font-weight: 700;
+  margin: 0;
 }
 
 .u-section-5 .u-image-3 {
-  width: 241px;
-  height: 143px;
-  margin: 0 auto;
+  width: 160px;
+  height: 160px;
+  margin: 20px auto 0;
 }
 
-.u-section-5 .u-container-layout-4 {
-  padding: 7px 20px;
-}
-
-.u-section-5 .u-image-4 {
-  width: 241px;
-  height: 143px;
-  margin: 0 auto;
-}
-
-.u-section-5 .u-container-layout-5 {
-  padding: 7px 20px;
-}
-
-.u-section-5 .u-image-5 {
-  width: 241px;
-  height: 143px;
-  margin: 0 auto;
-}
-
-.u-section-5 .u-container-layout-6 {
-  padding: 7px 20px;
-}
-
-.u-section-5 .u-image-6 {
-  width: 241px;
-  height: 143px;
-  margin: 0 auto;
-}
-
-.u-section-5 .u-container-layout-7 {
-  padding: 7px 20px;
-}
-
-.u-section-5 .u-image-7 {
-  width: 241px;
-  height: 143px;
-  margin: 0 auto;
-}
-
-.u-section-5 .u-container-layout-8 {
-  padding: 7px 20px;
-}
-
-.u-section-5 .u-image-8 {
-  width: 241px;
-  height: 143px;
-  margin: 0 auto;
+.u-section-5 .u-text-9 {
+  font-size: 1.125rem;
+  margin: 20px 0 0;
 }
 
 @media (max-width: 1199px) {
-   .u-section-5 {
-    min-height: 350px;
+  .u-section-5 .u-sheet-1 {
+    min-height: 428px;
   }
 
-  .u-section-5 .u-list-1 {
-    height: auto;
-    margin-bottom: -12px;
+  .u-section-5 .u-layout-cell-1 {
+    min-height: 314px;
   }
 
-  .u-section-5 .u-repeater-1 {
-    min-height: 266px;
+  .u-section-5 .u-layout-cell-2 {
+    min-height: 314px;
   }
 
-  .u-section-5 .u-image-1 {
-    inset: auto;
+  .u-section-5 .u-text-5 {
+    margin-left: 0;
+    margin-right: 0;
   }
 
-  .u-section-5 .u-image-2 {
-    inset: auto;
+  .u-section-5 .u-text-7 {
+    margin-left: 0;
+    margin-right: 0;
   }
 
-  .u-section-5 .u-image-3 {
-    inset: auto;
-  }
-
-  .u-section-5 .u-image-4 {
-    inset: auto;
-  }
-
-  .u-section-5 .u-image-5 {
-    inset: auto;
-  }
-
-  .u-section-5 .u-image-6 {
-    inset: auto;
-  }
-
-  .u-section-5 .u-image-7 {
-    inset: auto;
-  }
-
-  .u-section-5 .u-image-8 {
-    inset: auto;
+  .u-section-5 .u-layout-cell-3 {
+    min-height: 308px;
   }
 }
 
 @media (max-width: 991px) {
-   .u-section-5 {
-    min-height: 571px;
+  .u-section-5 .u-sheet-1 {
+    min-height: 320px;
   }
 
-  .u-section-5 .u-list-1 {
-    margin-bottom: -226px;
+  .u-section-5 .u-layout-cell-1 {
+    min-height: 100px;
   }
 
-  .u-section-5 .u-repeater-1 {
-    grid-auto-columns: calc(33.3333% - 6.66667px);
-    grid-template-columns: repeat(3, calc(33.3333% - 6.66667px));
-    min-height: 491px;
+  .u-section-5 .u-container-layout-1 {
+    padding-top: 30px;
+  }
+
+  .u-section-5 .u-text-2 {
+    width: auto;
+  }
+
+  .u-section-5 .u-text-3 {
+    width: auto;
+  }
+
+  .u-section-5 .u-layout-cell-2 {
+    min-height: 100px;
+  }
+
+  .u-section-5 .u-container-layout-2 {
+    padding-top: 30px;
+  }
+
+  .u-section-5 .u-text-5 {
+    width: auto;
+  }
+
+  .u-section-5 .u-text-6 {
+    width: auto;
+  }
+
+  .u-section-5 .u-layout-cell-3 {
+    min-height: 100px;
+  }
+
+  .u-section-5 .u-container-layout-3 {
+    padding-top: 30px;
+  }
+
+  .u-section-5 .u-text-8 {
+    width: auto;
+  }
+
+  .u-section-5 .u-text-9 {
+    width: auto;
   }
 }
 
 @media (max-width: 767px) {
-   .u-section-5 {
-    min-height: 837px;
+  .u-section-5 .u-container-layout-2 {
+    padding-left: 30px;
+    padding-right: 30px;
   }
+}
 
-  .u-section-5 .u-list-1 {
-    margin-bottom: 40px;
-  }
-
-  .u-section-5 .u-repeater-1 {
-    grid-auto-columns: calc(100% - 0px);
-    grid-template-columns: 100%;
-    min-height: 829px;
-  }
-
+@media (max-width: 575px) {
   .u-section-5 .u-container-layout-1 {
     padding-left: 10px;
     padding-right: 10px;
@@ -594,35 +782,224 @@
     padding-left: 10px;
     padding-right: 10px;
   }
+} .u-section-6 {
+  min-height: 402px;
+}
 
-  .u-section-5 .u-container-layout-4 {
+.u-section-6 .u-list-1 {
+  grid-template-rows: repeat(1, auto);
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
+.u-section-6 .u-repeater-1 {
+  grid-auto-columns: calc(25% - 7.5px);
+  grid-template-columns: repeat(4, calc(25% - 7.5px));
+  min-height: 322px;
+  grid-gap: 10px;
+}
+
+.u-section-6 .u-container-layout-1 {
+  padding: 7px 20px;
+}
+
+.u-section-6 .u-image-1 {
+  width: 241px;
+  height: 143px;
+  margin: 0 auto;
+}
+
+.u-section-6 .u-container-layout-2 {
+  padding: 7px 20px;
+}
+
+.u-section-6 .u-image-2 {
+  width: 241px;
+  height: 143px;
+  margin: 0 auto;
+}
+
+.u-section-6 .u-container-layout-3 {
+  padding: 7px 20px;
+}
+
+.u-section-6 .u-image-3 {
+  width: 241px;
+  height: 143px;
+  margin: 0 auto;
+}
+
+.u-section-6 .u-container-layout-4 {
+  padding: 7px 20px;
+}
+
+.u-section-6 .u-image-4 {
+  width: 241px;
+  height: 143px;
+  margin: 0 auto;
+}
+
+.u-section-6 .u-container-layout-5 {
+  padding: 7px 20px;
+}
+
+.u-section-6 .u-image-5 {
+  width: 241px;
+  height: 143px;
+  margin: 0 auto;
+}
+
+.u-section-6 .u-container-layout-6 {
+  padding: 7px 20px;
+}
+
+.u-section-6 .u-image-6 {
+  width: 241px;
+  height: 143px;
+  margin: 0 auto;
+}
+
+.u-section-6 .u-container-layout-7 {
+  padding: 7px 20px;
+}
+
+.u-section-6 .u-image-7 {
+  width: 241px;
+  height: 143px;
+  margin: 0 auto;
+}
+
+.u-section-6 .u-container-layout-8 {
+  padding: 7px 20px;
+}
+
+.u-section-6 .u-image-8 {
+  width: 241px;
+  height: 143px;
+  margin: 0 auto;
+}
+
+@media (max-width: 1199px) {
+   .u-section-6 {
+    min-height: 350px;
+  }
+
+  .u-section-6 .u-list-1 {
+    height: auto;
+    margin-bottom: -12px;
+  }
+
+  .u-section-6 .u-repeater-1 {
+    min-height: 266px;
+  }
+
+  .u-section-6 .u-image-1 {
+    inset: auto;
+  }
+
+  .u-section-6 .u-image-2 {
+    inset: auto;
+  }
+
+  .u-section-6 .u-image-3 {
+    inset: auto;
+  }
+
+  .u-section-6 .u-image-4 {
+    inset: auto;
+  }
+
+  .u-section-6 .u-image-5 {
+    inset: auto;
+  }
+
+  .u-section-6 .u-image-6 {
+    inset: auto;
+  }
+
+  .u-section-6 .u-image-7 {
+    inset: auto;
+  }
+
+  .u-section-6 .u-image-8 {
+    inset: auto;
+  }
+}
+
+@media (max-width: 991px) {
+   .u-section-6 {
+    min-height: 571px;
+  }
+
+  .u-section-6 .u-list-1 {
+    margin-bottom: -226px;
+  }
+
+  .u-section-6 .u-repeater-1 {
+    grid-auto-columns: calc(33.3333% - 6.66667px);
+    grid-template-columns: repeat(3, calc(33.3333% - 6.66667px));
+    min-height: 491px;
+  }
+}
+
+@media (max-width: 767px) {
+   .u-section-6 {
+    min-height: 837px;
+  }
+
+  .u-section-6 .u-list-1 {
+    margin-bottom: 40px;
+  }
+
+  .u-section-6 .u-repeater-1 {
+    grid-auto-columns: calc(100% - 0px);
+    grid-template-columns: 100%;
+    min-height: 829px;
+  }
+
+  .u-section-6 .u-container-layout-1 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-5 .u-container-layout-5 {
+  .u-section-6 .u-container-layout-2 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-5 .u-container-layout-6 {
+  .u-section-6 .u-container-layout-3 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-5 .u-container-layout-7 {
+  .u-section-6 .u-container-layout-4 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-5 .u-container-layout-8 {
+  .u-section-6 .u-container-layout-5 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-6 .u-container-layout-6 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-6 .u-container-layout-7 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-6 .u-container-layout-8 {
     padding-left: 10px;
     padding-right: 10px;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-5 .u-repeater-1 {
+  .u-section-6 .u-repeater-1 {
     grid-auto-columns: calc(50% - 5px);
     grid-template-columns: repeat(2, calc(50% - 5px));
   }
